tests/agl/rejections/type/bare_variant_with_fields.agl
enum Box
  | Empty
  | Full(item: int)

let b: Box = Full(item = 1)
case b of
  | Empty => print "empty"
  | Full => print "full"
